<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:errorEnabled="true"
    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/input_name"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/input_layout_name"
            app:errorEnabled="true"
    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_subject"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:hint="@string/input_subject"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/input_layout_subject"
            app:errorEnabled="true"
    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/input_email"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/input_layout_email"
            app:errorEnabled="true"
    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:hint="@string/input_text"
        />
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/button_reset"
            android:text="@string/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button_send"
            android:layout_margin="8dp"
    />

    <Button
            android:id="@+id/button_send"
            android:text="@string/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
    />

</RelativeLayout>